--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>MAP673 Portfolio Starter Template</title>
+    <title>Portfolio</title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
     <!-- Bootstrap CSS -->
@@ -90,7 +90,25 @@
               <a href="#"
                 ><img
                   class="card-img-top"
-                  src="/lesson-template/images/coral bleach.jpg"
+                  src="https://via.placeholder.com//430x245"
+                  alt=""
+              /></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">Final Project</a>
+                </h4>
+                <p class="card-text">
+                  Placeholder for final project.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6 portfolio-item">
+            <div class="card h-100">
+              <a href="#"
+                ><img
+                  class="card-img-top"
+                  src="/img/coral bleach.jpg"
                   alt=""
               /></a>
               <div class="card-body">
@@ -111,38 +129,15 @@
               <a href="#"
                 ><img
                   class="card-img-top"
-                  src="https://via.placeholder.com//430x245"
+                  src="us-renewable-energy/preview.png"
                   alt=""
               /></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Project Two</a>
+                  <a target="_blank" href="us-renewable-energy">US Renewable Energy<a>
                 </h4>
                 <p class="card-text">
-                  The only home we've ever known the only home we've ever known
-                  a mote of dust suspended in a sunbeam tendrils of gossamer
-                  clouds descended from astronomers two ghostly white figures in
-                  coveralls and helmets are softly dancing.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"
-                ><img
-                  class="card-img-top"
-                  src="https://via.placeholder.com//430x245"
-                  alt=""
-              /></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Project Three</a>
-                </h4>
-                <p class="card-text">
-                  Cosmos the carbon in our apple pies hydrogen atoms
-                  circumnavigated two ghostly white figures in coveralls and
-                  helmets are softly dancing laws of physics.
+                  Map showing range of US Hydro and Wind power plants.
                 </p>
               </div>
             </div>
@@ -222,7 +217,7 @@
               <div class="float-md-left mb-5 mr-md-4">
                 <img
                   class="rounded-circle img-fluid"
-                  src="/lesson-template/images/20220708_101512_capture.jpg"
+                  src="/img/20220708_101512_capture.jpg"
                   alt=""
                 />
               </div>
