--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
               <a href="#"
                 ><img
                   class="card-img-top"
-                  src="/img/coral bleach.jpg"
+                  src="/GBR/coral bleach.jpg"
                   alt=""
               /></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="https://github.com/schroeder1303/GBR-Bleaching">Great Barrier Reef</a>
+                  <a target="_blank" href="GBR">Great Barrier Reef</a>
                 </h4>
                 <p class="card-text">
                   This project shows the widespread reach of coral bleaching on the Great Barrier Reef (GBR). 
