--- a/index.html
+++ b/index.html
@@ -147,18 +147,17 @@
               <a href="#"
                 ><img
                   class="card-img-top"
-                  src="https://via.placeholder.com//430x245"
+                  src="/valladolid/preview-valladolid.png"
                   alt=""
               /></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Project Four</a>
+                  <a target="_blank" href="valladolid">Valladolid, Spain<a>
                 </h4>
                 <p class="card-text">
-                  Preserve and cherish that pale blue dot intelligent beings
-                  brain is the seed of intelligence dream of the mind's eye
-                  extraordinary claims require extraordinary evidence as a patch
-                  of light?
+                  After living in Valladolid, Spain for a year, I developed a favorite walking
+                  path that would take me to most of my favorite and frequented spots.  Take a 
+                  look!
                 </p>
               </div>
             </div>
