--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Portfolio</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&display=swap" rel="stylesheet" />
     <!-- Bootstrap CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -25,7 +25,7 @@
 
     <!-- Google web font -->
     <link
-      href="https://fonts.googleapis.com/css?family=Lato"
+      href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&display=swap"
       rel="stylesheet"
     />
 
@@ -74,9 +74,8 @@
       <div class="container text-center">
         <h1>Mapping Projects</h1>
         <p class="lead">
-          Built using <a href="https://getbootstrap.com/">Bootstrap</a> and several
-          starter templates from
-          <a href="https://startbootstrap.com/">Start Bootstrap</a>
+          These were created during class projects for University of Kentucky
+          New Maps Plus.
         </p>
       </div>
     </header>
@@ -142,6 +141,9 @@
               </div>
             </div>
           </div>
+        </div>
+      <div class="container">
+        <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
               <a href="#"
@@ -167,37 +169,15 @@
               <a href="#"
                 ><img
                   class="card-img-top"
-                  src="https://via.placeholder.com//430x245"
+                  src="PR/san-juan-beach.jpg"
                   alt=""
               /></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Project Five</a>
+                  <a target="_blank" href="PR">Puerto Rico<a>
                 </h4>
                 <p class="card-text">
-                  The ash of stellar alchemy white dwarf concept of the number
-                  one made in the interiors of collapsing stars inconspicuous
-                  motes of rock and gas extraplanetary.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"
-                ><img
-                  class="card-img-top"
-                  src="https://via.placeholder.com//430x245"
-                  alt=""
-              /></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Project Six</a>
-                </h4>
-                <p class="card-text">
-                  Cambrian explosion white dwarf paroxysm of global death not a
-                  sunrise but a galaxyrise dream of the mind's eye laws of
-                  physics?
+                  Sites and cities in Puerto Rico.
                 </p>
               </div>
             </div>
@@ -274,7 +254,7 @@
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">
-          Copyright &copy; Your Website 2023
+          Copyright &copy; Schroeder1303 2023
         </p>
       </div>
     </footer>
