close a tag and remove extra container element

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               /></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a target="_blank" href="us-renewable-energy">US Renewable Energy<a>
+                  <a target="_blank" href="us-renewable-energy">US Renewable Energy</a>
                 </h4>
                 <p class="card-text">
                   Map showing range of US Hydro and Wind power plants.
@@ -141,9 +141,6 @@
               </div>
             </div>
           </div>
-        </div>
-      <div class="container">
-        <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
               <a href="#"
@@ -154,7 +151,7 @@
               /></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a target="_blank" href="valladolid">Valladolid, Spain<a>
+                  <a target="_blank" href="valladolid">Valladolid, Spain</a>
                 </h4>
                 <p class="card-text">
                   After living in Valladolid, Spain for a year, I developed a favorite walking
@@ -174,7 +171,7 @@
               /></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a target="_blank" href="PR">Puerto Rico<a>
+                  <a target="_blank" href="PR">Puerto Rico</a>
                 </h4>
                 <p class="card-text">
                   Sites and cities in Puerto Rico.
