--- a/valladolid/index.html
+++ b/valladolid/index.html
@@ -148,7 +148,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.72.2/src/L.Control.Locate.min.js" ></script>
 	
 	<!-- Add the route.js file to the page. -->
-	<script src="/valladolid/route.js"></script>
+	<script src="route.js"></script>
 
 
 	<script>
