--- a/index.html
+++ b/index.html
@@ -89,15 +89,18 @@
               <a href="#"
                 ><img
                   class="card-img-top"
-                  src="https://via.placeholder.com//430x245"
+                  src="PR-Coral-Reefs/images/arrecifeDesecheo_JPZegarra.jpg"
                   alt=""
               /></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Final Project</a>
+                  <a href="PR-Coral-Reefs/">Puerto Rico Coral Reefs</a>
                 </h4>
                 <p class="card-text">
-                  Placeholder for final project.
+                  This project shows the state of the coral reefs around Puerto Rico after
+                  Hurricanes Irma and Maria passed through.  The sites focus on assessed damage leves, 
+                  triage efforts to salvage thousands of at-risk corals, and restoration potential either from 
+                  reattachment of corals or replanting the reef with propogated corals to restore them.
                 </p>
               </div>
             </div>
