--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
               <a href="#"
                 ><img
                   class="card-img-top"
-                  src="/PR-Coral-Reefs/images/arrecifeDesecheo_JPZegarra.jpg"
+                  src="/PR-Coral-Reefs/arrecifeDesecheo_JPZegarra.jpg"
                   alt=""
               /></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="/PR-Coral-Reefs/">Puerto Rico Coral Reefs</a>
+                  <a target="_blank" href="PR-Coral-Reefs">Puerto Rico Coral Reefs</a>
                 </h4>
                 <p class="card-text">
                   This project shows the state of the coral reefs around Puerto Rico after
