--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               /></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a target="_blank" href="PR-Coral-Reefs">Puerto Rico Coral Reefs</a>
+                  <a target="_blank" href="PR-Coral-Reefs/">Puerto Rico Coral Reefs</a>
                 </h4>
                 <p class="card-text">
                   This project shows the state of the coral reefs around Puerto Rico after
